# fast-openai-like-transcription-server

./: .gitignore  README.md  cli  nohup.out  pyproject.toml  requirements.in  requirements.txt  sample-transcription.json  sample.http  sample.py  sample.webm  server.py  setup.py
