[project]
name = "fast-openai-like-transcription-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ane-transformers==0.1.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "cattrs==24.1.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "coremltools==8.3.0",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "h11==0.16.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "jinja2==3.1.6",
    "llvmlite==0.44.0",
    "markupsafe==3.0.2",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numba==0.61.2",
    "numpy==2.2.5",
    "openai-whisper==20240930",
    "packaging==25.0",
    "protobuf==3.20.1",
    "pyaml==25.1.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "setuptools==80.3.1",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
]
